--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,32 @@
     .container {
         margin: auto;
         overflow: hidden;
-        padding:0 20px 0 20px
+        padding: 0 20px 0 20px
     }
     
     hr {
-      border: 1px solid #252f31;
-      margin-bottom: 25px;
-        width:50%;
+        border: 1px solid #252f31;
+        margin-bottom: 25px;
+        width: 50%;
     }
     /* Body */
     
     body {
         font-family: sans-serif;
-        height: 100%;
         margin: 0;
     }
     /* EO Body */
     /* Header */
     
-    .header .navbar {
+    .header {
+        overflow: hidden;
+    }
+    
+    .clearfix {
+        overflow: hidden;
+    }
+    
+    .navbar {
         overflow: hidden;
         padding-top: 0;
         padding-left: 50px;
@@ -30,11 +37,10 @@
     
     .header .navbar img {
         float: left;
-        text-align:center;
+        text-align: center;
         width: 120px;
         padding-top: 6px;
     }
-    
     
     .header .navbar ul {
         list-style: none;
@@ -82,6 +88,12 @@
     
     .header .slidermen .intro h2 span {
         text-transform: uppercase;
+    }
+    
+    @media screen and (max-width:800px) {
+        .navbar img {
+            display: none;
+        }
     }
     /* women*/
     
@@ -140,17 +152,17 @@
         overflow: hidden;
     }
     
-    .classes .class {
+    .class {
         float: left;
         width: 33.3%;
-        height: 900px;
+        height: auto;
         text-align: center;
         color: #252f31;
+        display: inline-block;
     }
     
     .classes .class img {
         margin: 0 50px 50px 50px;
-        
     }
     
     .classes .class h2 {
@@ -170,6 +182,15 @@
     .classes .class p {
         text-transform: capitalize;
         margin: 10px
+    }
+    
+    @media screen and (max-width:1000px) {
+        .class {
+            width: 100%;
+        }
+        hr {
+            width: 100%;
+        }
     }
     /* EO classes */
     /* about */
@@ -213,9 +234,9 @@
     .footer span {
         text-transform: uppercase;
         color: #252f31;
-        float: left;
         margin-top: 10px;
         padding-left: 50px;
+        display: inline-block;
     }
     
     .footer .container .social ul {
@@ -226,12 +247,23 @@
     
     .footer .container .social ul li {
         display: inline-block;
-        float: right;
         margin: 2px;
     }
     
     .footer .container .social ul li img {
         width: 24px
+    }
+    
+    @media screen and (max-width:900px) {
+        .class {
+            width: 100%;
+            display: block;
+        }
+        .social {
+            text-align: center;
+            display: block;
+            width: 100%;
+        }
     }
     /* EO Footer */
     /* Page Men */
@@ -252,8 +284,9 @@
         padding-top: 20px;
     }
     
-    .collection .container .bigphoto>div {
+    .pic {
         float: left;
+        display: inline-block;
         width: 33.3%;
         margin-bottom: 40px;
     }
@@ -264,6 +297,18 @@
         text-align: center;
         text-transform: capitalize;
         color: #252f31;
+    }
+    
+    @media screen and (max-width:1000px) {
+        .pic {
+            width: 50%;
+        }
+    }
+    
+    @media screen and (max-width:700px) {
+        .pic {
+            width: 100%;
+        }
     }
     
     table,
@@ -297,142 +342,151 @@
     .table tr td a:hover {
         color: #252f31;
     }
-
-/* Contact */
-
-.contactuspage{
-    overflow: hidden;
-    text-align: center
-}
-
-
-
-.contactuspage .header h2{
-    color: #000;
-    font-size: 200%;
-}
-.contactuspage .header h4{
-    color: #000;
-    display: inline-block;
-}
-
-.contactuspage .header p{
-   line-height: 1.5;
-    color: #252f31
-}
-
-
-
-.contactform{
-    overflow: hidden;
-    text-align: left;
-    padding-left: 200px
-}
-.contactform form{
-    padding-top: 30px;
-
-    height: 700px;
-}
-.contactform form  input[type=text], input[type=password], textarea, select{
-    width: 75%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: block;
-    border: none;
-    background: #f1f1f1;
-}
-
-.contactform form input[type=submit]{
-  background-color: #252f31;
-  color: white;
-  padding: 14px 20px;
-  border: none;
-  cursor: pointer;
-  width: 75%;
-  opacity: 0.9;
-
-}
-.contactform form input[type=submit]:hover{
-    opacity: 1
-}
-
-label{
-    font-weight: bold
-}
-
-/* EO Contact */
-
-
-
-
-/* Subscribe */
-
-/* Full-width input fields */
- input[type=text], input[type=password], input[type=email] {
-      width: 100%;
-      padding: 15px;
-      margin: 5px 0 22px 0;
-      display: block;
-      border: none;
-      background: #f1f1f1;
-}
-input[type=password]{
-    display: inline-block
-}
-
-input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-
-
-/* Set a style for all buttons */
-button{
-  background-color: #252f31;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-button:hover {
-  opacity:1;
-}
-
-/* Extra styles for the cancel button */
-.container_form .cancelbtn {
-  background-color: #252f31;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
-}
-
-/* Add padding to container elements */
-.container_form {
-    padding:0 100px 70px 100px
-}
-.container_form h1,.container_form p{
-    text-align: center;
-}
-
-/* Clear floats */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
-    width: 100%;
-  }
-}
-/* EO Subscribe */
+    /* Contact */
+    
+    .contactuspage {
+        overflow: hidden;
+        text-align: center
+    }
+    
+    .contactuspage .header h2 {
+        color: #000;
+        font-size: 200%;
+    }
+    
+    .contactuspage .header h4 {
+        color: #000;
+        display: inline-block;
+    }
+    
+    .contactuspage .header p {
+        line-height: 1.5;
+        color: #252f31
+    }
+    
+    .contactform {
+        overflow: hidden;
+        text-align: left;
+        width: 80%;
+        margin: auto;
+    }
+    
+    .contactform form {
+        padding-top: 30px;
+        height: 700px;
+    }
+    
+    .contactform form input[type=text],
+    input[type=password],
+    textarea,
+    select {
+        width: 75%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: block;
+        border: none;
+        background: #f1f1f1;
+    }
+    
+    .contactform form input[type=submit] {
+        background-color: #252f31;
+        color: white;
+        padding: 14px 20px;
+        border: none;
+        cursor: pointer;
+        width: 75%;
+        opacity: 0.9;
+    }
+    
+    .contactform form input[type=submit]:hover {
+        opacity: 1
+    }
+    
+    label {
+        font-weight: bold
+    }
+    
+    @media screen and (max-widht:800px) {
+        .contactform {
+            width: 100%;
+        }
+    }
+    /* EO Contact */
+    /* Subscribe */
+    /* Full-width input fields */
+    
+    input[type=text],
+    input[type=password],
+    input[type=email],
+    select {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: block;
+        border: none;
+        background: #f1f1f1;
+    }
+    
+    input[type=password] {
+        display: inline-block
+    }
+    
+    input[type=text]:focus,
+    input[type=password]:focus,
+    input[type=email]:focus,
+    select:focus {
+        background-color: #ddd;
+        outline: none;
+    }
+    /* Set a style for all buttons */
+    
+    button {
+        background-color: #252f31;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        opacity: 0.9;
+    }
+    
+    button:hover {
+        opacity: 1;
+    }
+    /* Extra styles for the cancel button */
+    
+    .container_form .cancelbtn {
+        background-color: #252f31;
+    }
+    /* Float cancel and signup buttons and add an equal width */
+    
+    .cancelbtn,
+    .signupbtn {
+        float: left;
+        width: 50%;
+    }
+    /* Add padding to container elements */
+    
+    .container_form {
+        padding: 0 100px 70px 100px
+    }
+    
+    .container_form h2 {
+        text-align: center;
+    }
+    /* Clear floats */
+    
+    .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    
+    @media screen and (max-width: 300px) {
+        .cancelbtn,
+        .signupbtn {
+            width: 100%;
+        }
+    }
+    /* EO Subscribe */
